# rust-freelance-roadmap

./: .gitignore  README.md
.github/workflows/: ci.yml
fase-1-base/: README.md  errores_result.rs  iterators_closures.rs  ownership_lifetimes.rs  traits_generics.rs
fase-1-base/ejercicios/: Cargo.toml
fase-1-base/ejercicios/src/: ej01_frecuencias.rs  ej02_pila_generica.rs  ej03_parser_config.rs  ej04_pipeline_sensores.rs  ej05_lifetimes_busqueda.rs  ej06_figuras_dyn.rs  lib.rs
fase-2-intermedio/: README.md  smart_pointers.rs
fase-2-intermedio/async-tokio/: Cargo.toml  README.md
fase-2-intermedio/async-tokio/src/: lib.rs  main.rs
fase-2-intermedio/concurrencia/: Cargo.toml  README.md
fase-2-intermedio/concurrencia/src/: lib.rs  main.rs
fase-2-intermedio/ejercicios/: Cargo.toml  README.md
fase-2-intermedio/ejercicios/src/: ej01_cache_memo.rs  ej02_mapreduce.rs  ej03_reintentos_async.rs  ej04_pipeline_async.rs  lib.rs
fase-3-proyectos-portafolio/: README.md
fase-3-proyectos-portafolio/api-rest-axum/: Cargo.toml  Dockerfile  README.md
fase-3-proyectos-portafolio/api-rest-axum/migrations/: 0001_crear_tareas.sql
fase-3-proyectos-portafolio/api-rest-axum/src/: db.rs  error.rs  lib.rs  main.rs  modelos.rs  rutas.rs
fase-3-proyectos-portafolio/api-rest-axum/tests/: integracion.rs
fase-3-proyectos-portafolio/cli-tool/: Cargo.toml  README.md
fase-3-proyectos-portafolio/cli-tool/src/: buscar.rs  lib.rs  main.rs  reemplazar.rs
fase-3-proyectos-portafolio/cli-tool/tests/: integracion.rs
fase-3-proyectos-portafolio/mini-blockchain/: Cargo.toml  README.md
fase-3-proyectos-portafolio/mini-blockchain/src/: bloque.rs  cadena.rs  lib.rs  main.rs
fase-4-solana-anchor/: README.md
recursos/: README.md
